Java 11 and Spring 2.1.1